--- a/packages/governance-sdk/package.json
+++ b/packages/governance-sdk/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "esbuild": "^0.14.11",
     "esbuild-jest": "^0.5.0",
+    "isomorphic-fetch": "^2.0.0",
     "jest": "^27.4.7",
     "typescript": "^4.5.4",
     "@solana/spl-token": "0.1.3"
